objects/SalesResult__c.object
<CustomObject>
    <description>削除対象Object
※別売上Objectに変更</description>
    <fields>
        <fullName>Area__c</fullName>
        <label>地域</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Element__c</fullName>
        <label>要素</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <formula>IF (CONTAINS( SalesOrder__r.FlagshipProduct__c  , &quot;6010&quot;), &quot;6010&quot; 
,IF (CONTAINS( SalesOrder__r.FlagshipProduct__c  , &quot;6050&quot;), &quot;6050&quot; 
,IF (CONTAINS( SalesOrder__r.FlagshipProduct__c  , &quot;6070&quot;), &quot;6070&quot; 
,IF (CONTAINS( SalesOrder__r.FlagshipProduct__c  , &quot;ZS050&quot;), &quot;ZS050&quot; 
,IF (CONTAINS( SalesOrder__r.FlagshipProduct__c  , &quot;2250&quot;), &quot;2250&quot; 
,IF (CONTAINS( SalesOrder__r.FlagshipProduct__c  , &quot;9130&quot;), &quot;9130&quot; 
,IF (CONTAINS( SalesOrder__r.FlagshipProduct__c  , &quot;9010&quot;), &quot;9010&quot; 
,IF (CONTAINS( SalesOrder__r.FlagshipProduct__c  , &quot;8020&quot;), &quot;8020&quot; 
,IF (CONTAINS( SalesOrder__r.FlagshipProduct__c  , &quot;8030&quot;), &quot;8030&quot; 
,IF (CONTAINS( SalesOrder__r.FlagshipProduct__c  , &quot;8040&quot;), &quot;8040&quot; 
,IF (CONTAINS( SalesOrder__r.FlagshipProduct__c  , &quot;8060&quot;), &quot;8060&quot; 
,IF (CONTAINS( SalesOrder__r.FlagshipProduct__c  , &quot;2400&quot;), &quot;L2400&quot; 
,IF (CONTAINS( SalesOrder__r.FlagshipProduct__c  , &quot;500&quot;), &quot;LC500&quot; 
,IF (CONTAINS( SalesOrder__r.FlagshipProduct__c  , &quot;50&quot;), &quot;50L&quot; 
,IF (CONTAINS( SalesOrder__r.FlagshipProduct__c  , &quot;60&quot;), &quot;60L&quot; 
, &quot;&quot;)))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>機種略称(ME)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JishaTasha__c</fullName>
        <label>自社／他社</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Koban__c</fullName>
        <label>工番</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kokunaigai__c</fullName>
        <label>国内外</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesDateFormula__c</fullName>
        <formula>Datevalue(SalesDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>売上日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SalesDate__c</fullName>
        <label>売上日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SalesForeign__c</fullName>
        <label>売上金額（外貨）</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SalesJisseki__c</fullName>
        <label>税抜売上金額(円貨)_実績レート</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SalesOrderNo_Position_Serial_Sync__c</fullName>
        <externalId>true</externalId>
        <label>販売オーダ_位置_連番_連携用</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SalesOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>販売オーダ</label>
        <referenceTo>SalesOrder__c</referenceTo>
        <relationshipLabel>売上</relationshipLabel>
        <relationshipName>SalesResults</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesShanai__c</fullName>
        <label>税抜売上金額(円貨)_社内レート</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SalesYM__c</fullName>
        <label>売上年月</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bumon__c</fullName>
        <label>部門</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hanbaisaki__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>販売先取引先</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>売上 (販売先)</relationshipLabel>
        <relationshipName>aaaS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>keiretsu__c</fullName>
        <label>系列</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kigyoTani__c</fullName>
        <label>企業単位</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>seikyusaki__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>請求先取引先</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>売上 (請求先)</relationshipLabel>
        <relationshipName>cccS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>shukkasaki__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>出荷先取引先</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>売上 (出荷先)</relationshipLabel>
        <relationshipName>bbbS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>uriageNendo__c</fullName>
        <label>売上年度</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>売上</label>
    <listViews>
        <fullName>SMU_Report</fullName>
        <columns>NAME</columns>
        <columns>SalesOrderNo_Position_Serial_Sync__c</columns>
        <columns>Element__c</columns>
        <columns>bumon__c</columns>
        <columns>keiretsu__c</columns>
        <columns>Area__c</columns>
        <columns>Kokunaigai__c</columns>
        <columns>JishaTasha__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>SalesDateFormula__c</columns>
        <columns>SalesYM__c</columns>
        <columns>uriageNendo__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>bumon__c</field>
            <operation>equals</operation>
            <value>SMU</value>
        </filters>
        <filters>
            <field>SalesYM__c</field>
            <operation>equals</operation>
            <value>201803</value>
        </filters>
        <label>SMU</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>all</fullName>
        <columns>NAME</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>全て選択</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <label>売上名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>BumonRoleSharing__c</fullName>
        <label>部門のロールへの共有</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>KeiretsuRoleSharing__c</fullName>
        <label>系列のロールへの共有</label>
    </sharingReasons>
</CustomObject>